Ported things to JDK19 / fluffyj-memory 1.2.0